# jdr

./: .gitignore  LICENSE  README.md  pyproject.toml
jdr/: benchmark.py  evaluators.py  pretty.py  utils.py
jdr/agents/: __init__.py  baselines.py  tool_call_agent.py
jdr/prompts/: frames_evaluator.md  simpleqa_evaluator.md  tool_call_agent_v2.md
jdr/tools/: __init__.py  scrape.py  search.py
